--- a/package.json
+++ b/package.json
@@ -3,24 +3,10 @@
   "version": "1.0.0",
   "description": "A bot based on portal character Cave Johnson with fun commands and real usage.",
   "main": "app.js",
+  "engines": {
+		"node": "8.2.0"
+	},
   "dependencies": {
-    "commando": "^0.0.2",
-    "common-tags": "^1.4.0",
-    "discord.js": "^11.1.0",
-    "discord.js-commando": "^0.9.0",
-    "ffmpeg": "^0.0.4",
-    "ffmpeg-binaries": "^3.2.2-3",
-    "indev": "^3.0.10",
-    "ms": "^2.0.0",
-    "node-opus": "^0.2.6",
-    "online": "^0.0.1",
-    "pm2": "^2.4.6",
-    "simple-youtube-api": "^2.1.0",
-    "sqlite": "^2.7.0",
-    "sqlite3": "^3.1.8",
-    "ytdl-core": "^0.13.3"
-  },
-  "devDependencies": {
     "commando": "^0.0.2",
     "common-tags": "^1.4.0",
     "discord.js": "^11.1.0",
