--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "A bot based on portal character Cave Johnson with fun commands and real usage.",
   "main": "app.js",
   "engines": {
-		"node": "8.2.0"
-	},
+    "node": "8.2.0"
+  },
   "dependencies": {
     "commando": "^0.0.2",
     "common-tags": "^1.4.0",
@@ -16,6 +16,7 @@
     "node-opus": "^0.2.6",
     "online": "^0.0.1",
     "simple-youtube-api": "^2.1.0",
+    "sqlite": "^2.8.0",
     "sqlite3": "^3.1.8",
     "ytdl-core": "^0.13.3"
   },
